--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/stiles.css" />
+    <link rel="stylesheet" href="./stiles.css" />
   </head>
   <body>
     <!-- Wrapper -->
