--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <p class="my-descr">Omnia mea mecum porto</p>
         </div>
         <!-- My projects -->
-        <div class="my-project-container">
+        <!-- <div class="my-project-container">
           <h3 class="my-projects-title">Projects</h3>
           <ol class="my-project-list">
             <li class="my-project-item">
@@ -65,7 +65,7 @@
               >
             </li>
           </ol>
-        </div>
+        </div> -->
         <!-- Work experience -->
         <div class="work-experience">
           <h3 class="work-experience-title">Work experience</h3>
