--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
           <!-- Company 4 -->
           <div class="work-experience-container">
             <h4 class="work-experience-company">
-              Supervisor <span class="company">SE Ukrtransgaz</span>
+              Drilling control engineer
+              <span class="company">SE Ukrtransgaz</span>
             </h4>
             <p class="work-experience-period">
               August 1994 - December 1998
